--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "description": "Deep-freeze your Hyperapp state to keep you honest about immutability",
   "main": "dist/freeze.js",
-  "jsnext:main": "src/index.js",
+  "type": "module",
   "module": "src/index.js",
   "repository": {
     "type": "git",
@@ -14,31 +14,30 @@
     "dist/**"
   ],
   "scripts": {
-    "test": "jest --coverage --no-cache",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --no-cache",
     "build": "npm run bundle && npm run minify",
     "bundle": "rollup -c",
     "minify": "uglifyjs dist/freeze.js -o dist/freeze.js -mc pure_funcs=Object.defineProperty --source-map includeSources,url=freeze.js.map",
     "prepare": "npm run build",
-    "format": "prettier --semi false --write '{src,test}/**/*.js'"
+    "format": "prettier --write \"{src,test}/**/*.js\""
   },
-  "babel": {
-    "presets": "env"
+  "jest": {
+    "transform": {}
   },
   "dependencies": {
-    "deep-freeze": "^0.0.1"
+    "deep-freeze": "=0.0.1"
   },
   "peerDependencies": {
-    "hyperapp": "^1.0.0"
+    "hyperapp": "^2.0.0"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "hyperapp": "^1.0.0",
-    "jest": "^21.2.1",
-    "prettier": "^1.9.2",
-    "rollup": "^0.52.2",
-    "rollup-plugin-commonjs": "^8.2.1",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "uglify-js": "^3.2.2"
+    "hyperapp": "=2.0.20",
+    "jest": "=27.4.7",
+    "prettier": "=2.5.1",
+    "rollup": "=0.52.2",
+    "rollup-plugin-commonjs": "=8.2.1",
+    "rollup-plugin-node-resolve": "=3.0.0",
+    "uglify-js": "=3.2.2"
   },
   "author": "Wolfgang Wedemeyer <wolf@okwolf.com>",
   "license": "MIT",
